---------------------------------------------
- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.10921                                -
---------------------------------------------
- 2021-05-10                                -
---------------------------------------------
.: WSM: Task: Navigation to all invoices (WSM-345)

- v1.0.1092                                 -
---------------------------------------------
- 2021-05-09                                -
---------------------------------------------
.: WSM: Task: Group completed invoices (WSM-339)

---------------------------------------------
- 2021-05-08                                -
---------------------------------------------
.: WSM: Task: Update invoice-setup to show check (WSM-232)
.: WSM: Task: Add payment method message (WSM-232)

---------------------------------------------
- 2021-05-06                                -
---------------------------------------------
.: WSM: Task: Pre-order through local website or link to other website (WSM-232)

---------------------------------------------
- 2021-04-17                                -
---------------------------------------------
.: WSM: Task: Add delivery and price (WSM-333)

---------------------------------------------
- 2021-04-03                                -
---------------------------------------------
.: WSW: Task: Receipt module to list, filter receipts and the store page details (WSW-100)

- v1.0.1091                                 -
---------------------------------------------
- 2021-03-28                                -
---------------------------------------------
.: WSM: Task: Able to add numbers of promotion (WSM-318)
.: WSM: Task: View name in invoice card (WSM-313)
.: WSM: Task: Fix to remove group when empty invoices (WSM-320)

---------------------------------------------
- 2021-03-26                                -
---------------------------------------------