@@ -16,8 +16,6 @@
         </div>
     </div>
 </div>
-
-
 <div class="d-flex justify-content-center align-items-center" *ngIf="selectedPackage == 'premium' && !isInvoiceEnabled && !loading.isRunning(); else loadingTemplate">
     <div *ngIf="phase.isStep(0)">
         <div class="text-center pt-5 mt-5">
@@ -34,14 +32,45 @@
             <button class="btn btn-start" (click)="phase.next()">Get started now</button>
         </div>
     </div>
-    <form *ngIf="phase.isStep(1)" class="pt-5 py-5">
-        <p class="font-8 mb-2">Start invoice ID with the prefix below:</p>
+    <form *ngIf="phase.isStep(1)" class="py-5">
+        <p class="mb-2">Start invoice ID with the prefix below:</p>
         <div class="mb-3 input-group">
             <input name="prefix" class="form-control d-inline-block" style="width: 70px" placeholder="Prefix" maxlength="3" [(ngModel)]="prefix" />
             <input name="prefix" class="form-control d-inline-block input-group-append" style="flex-basis: 60%" disabled value="000001" />
         </div>
         <button class="btn btn-sm btn-controller" (click)="phase.previous()">Back</button>
-        <button [disabled]="addLoading.isRunning()" class="btn btn-sm btn-controller float-right" (click)="addInvoiceConfiguration()">
+        <button class="btn btn-sm btn-controller float-right" (click)="nextToReceivingPhase()">Next</button>
+    </form>
+    <form [formGroup]="receivingForm" *ngIf="phase.isStep(2)" class="py-5">
+        <p class="mb-2">Select to start receiving orders from public:</p>
+        <mat-radio-group class="d-block font-9 mb-3" formControlName="isPublicReceivable">
+            <mat-radio-button [color]="'primary'" class="d-block" [value]="true">Enable</mat-radio-button>
+            <mat-radio-button [color]="'primary'" class="d-block" [value]="false">Disable</mat-radio-button>
+        </mat-radio-group>
+        <div *ngIf="receivingForm?.value?.isPublicReceivable">
+            <h5>Bank Details</h5>
+            <div class="alert alert-sm alert-warning font-8 d-inline-block">
+                Only the customers that you approve their orders are available to see the bank details for payment purpose.
+            </div>
+            <div class="mb-2">
+                <label>Bank Name:</label>
+                <mat-select name="bankName" class="form-control d-block font-9" type="text" maxlength="36" formControlName="bankName">
+                    <mat-option *ngFor="let paymentMethod of paymentMethods() | keyvalue" [value]="paymentMethod.key">
+                        {{paymentMethod.value}}
+                    </mat-option>
+                </mat-select>
+            </div>
+            <div class="mb-2">
+                <label>Account Name:</label>
+                <input name="accountName" class="form-control" type="text" maxlength="72" formControlName="accountName" />
+            </div>
+            <div class="mb-3">
+                <label>Account No:</label>
+                <input name="accountNo" class="form-control" type="text" maxlength="36" formControlName="accountNo" />
+            </div>
+        </div>
+        <button class="btn btn-sm btn-controller" (click)="phase.previous()">Back</button>
+        <button [disabled]="addLoading.isRunning()" class="btn btn-sm btn-controller float-right" (click)="startInvoiceFeature()">
             <ws-spinner class="mr-2" *ngIf="addLoading.isRunning()" [width]="15" [height]="15" [borderWidth]="1" [spinnerColor]="'#b71c1c'"></ws-spinner>Start</button>
     </form>
 </div>
