@@ -7,6 +7,7 @@
 - 2021-05-10                                -
 ---------------------------------------------
 .: WSM: Task: Navigation to all invoices (WSM-345)
+.: WSM: Task: Start up wizard to start the invoice feature (WSM-344)
 
 - v1.0.1092                                 -
 ---------------------------------------------
